--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,162 @@
 
 */
 
+/*<-----------------------------Other-class----------------------------->*/
+
+.clamp-witdh {
+  width: var(--width-clamp);
+}
+
+/*<-----------------------------Page----------------------------->*/
 .page {
-  min-inline-size: 320px;
+  min-inline-size: 375px;
+  max-inline-size: 700px;
+  font-family: var(--font-inter), sans-serif;
+  font-variation-settings: 'wght' var(--font-weight-normal);
   min-block-size: 100dvb;
+  margin: 0 auto;
+  background: url('../images/background.png') center/cover no-repeat;
+  background-attachment: fixed;
+}
+
+/*<-----------------------------Header----------------------------->*/
+
+.header {
+  padding: 100px 0;
+  min-height: 527px;
+}
+
+.header__logo {
+  display: flex;
+  padding: 120px 14px;
+  flex-direction: column;
+  gap: 20px;
+  font-family: var(--font-press-start), sans-serif;
+  text-align: center;
+  border: 2px solid var(--color-main);
+  background-color: var(--color-bg);
+}
+
+@media (min-width: 1440px) {
+  .header__logo {
+    padding: 128px 120.5px;
+  }
+}
+
+.header__title {
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+}
+
+.header__subtitle {
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  text-transform: uppercase;
+}
+
+/*<-----------------------------Main----------------------------->*/
+
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 51px;
+}
+
+@media (min-width: 1440px) {
+  .main {
+    gap: 49px;
+  }
+}
+
+/*<-----------------------------Card----------------------------->*/
+
+.card {
+  border: 2px solid var(--color-main);
+  background-color: var(--color-bg);
+}
+
+.card__title {
+  padding: 4px 10px 6px;
+  font-weight: var(--font-weight-bold);
+}
+
+.card__title-text {
+  font-size: var(--size-card-text-title);
+}
+
+.card__img {
+  min-height: 375px;
+  background: var(--card-img) center/cover no-repeat;
+  object-fit: cover;
+  background-position: center;
+  position: relative;
+  background-blend-mode: hard-light;
+}
+
+@media (min-width: 1440px) {
+  .card__img {
+    min-height: 696px;
+  }
+}
+
+.card__label {
+  position: absolute;
+  top: 25px;
+  right: 13px;
+  font-family: var(--font-press-start);
+  font-weight: var(--font-weight-normal);
+  font-size: var(--size-card-text-label);
+  opacity: 0.5;
+  -webkit-text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff,
+    1px 1px 0 #fff;
+  text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff,
+    1px 1px 0 #fff;
+}
+
+.card__footer {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  padding: 25px 25px 25px 25px;
+}
+
+@media (min-width: 1440px) {
+  .card__footer {
+    padding: 27px 25px 25px 25px;
+    gap: 27px;
+  }
+}
+
+.card__description {
+  flex-direction: column;
+  display: flex;
+  gap: 25px;
+  line-height: 21px;
+  font-size: var(--size-card-text-description);
+}
+
+@media (min-width: 1440px) {
+  .card__description {
+    gap: 27px;
+  }
+}
+
+.card__like-button {
+  display: inline-flex;
+  align-items: center;
+  gap: 12px;
+  align-self: end;
+  border: none;
+  background-color: transparent;
+}
+
+.button__text {
+  padding: 10px 35px;
+  border: 2px solid var(--color-main);
+  font-family: var(--font-press-start);
+  font-weight: var(--font-weight-normal);
+  font-size: var(--size-card-text-button);
+}
+
+.like-icon {
+  width: 27px;
+  height: 24px;
 }
