--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,8 @@
   font-variation-settings: 'wght' var(--font-weight-normal);
   min-block-size: 100dvb;
   margin: 0 auto;
-  background: url('../images/background.png') center/cover no-repeat;
+  background-image: var(--bg-gradient);
+  object-fit: cover;
   background-attachment: fixed;
 }
 
