--- a/styles/style.css
+++ b/styles/style.css
@@ -199,6 +199,7 @@ section:not(section:last-child) {
   flex-direction: column;
   align-items: center;
   padding: 15px 20px 15px 20px;
+  gap: 8px;
 }
 
 @media (min-width: 1440px) {
@@ -208,12 +209,8 @@ section:not(section:last-child) {
   }
 }
 
-.floppy-icon {
-  margin-bottom: 8px;
-}
-
 @media (min-width: 1440px) {
-  .floppy-icon {
+  .floppy-icon__footer {
     margin-bottom: 0;
     margin-right: 3.5px;
     width: 21px;
@@ -223,32 +220,45 @@ section:not(section:last-child) {
 
 /*<-----------------------------Modal----------------------------->*/
 
-.modal-window {
+.modal-window:is([open]) {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  gap: 30px;
   align-items: center;
   position: fixed;
   inset: 0;
-  gap: 30px;
   width: clamp(341px, 90vw, 353px);
+  padding: 30px 42px;
+}
+
+dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.7);
+  backdrop-filter: blur(7px);
+}
+
+@media (min-width: 1440px) {
+  .modal-window:is([open]) {
+    padding: 30px 30px;
+  }
+}
+
+.modal-window__text-block {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 19px;
 }
 
 .button-modal {
-  text-align: center;
   width: 100%;
   min-height: 38px;
 }
 
 .modal-window__text {
   line-height: 150%;
+  text-transform: uppercase;
   font-size: var(--font-modal-size);
   font-family: var(--font-press-start);
   font-weight: var(--font-weight-noraml);
-}
-
-.modal-window__text-block {
-  display: flex;
-  align-items: center;
-  gap: 20px;
 }
