--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,40 @@
 
 */
 
+/*<-----------------------------Filter----------------------------->*/
+
+.card-filter__contrast {
+  filter: contrast(200%);
+}
+
+.card-filter__opacity {
+  filter: opacity(0.5);
+}
+
+.card-filter__grayscale {
+  filter: grayscale(0.8);
+}
+
+.card-filter__blur {
+  filter: blur(0.2em);
+}
+
+.card-filter__brightness {
+  filter: brightness(200%);
+}
+
+.card-filter__saturate {
+  filter: saturate(200%);
+}
+
+.card-filter__hue-rotate {
+  filter: hue-rotate(-90deg);
+}
+
+.card-filter__invert-and-blur {
+  filter: invert(0.7) blur(0.2em);
+}
+
 /*<-----------------------------Other-class----------------------------->*/
 
 .clamp-witdh {
@@ -17,15 +51,55 @@
 }
 
 .button {
-  background-color: #fff;
-  border: 2px solid var(--color-main);
+  position: relative;
+  background-color: var(--color-bg);
+  outline: none;
+  border: 2px solid var(--color-accent);
   font-family: var(--font-press-start);
   font-weight: var(--font-weight-noraml);
   font-size: var(--size-card-text-button);
+  transition: box-shadow 0.3s ease, scale 0.5s ease-in-out;
+  z-index: 1;
+}
+
+.button::before {
+  --color-accent: #000;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 101%;
+  background-color: var(--color-accent);
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.5s ease-in-out;
+  z-index: 0;
+}
+
+.button:hover::before {
+  transform: scaleX(1);
+}
+
+.button > span {
+  --color-accent: #fff;
+  position: relative;
+  z-index: 1;
+  color: var(--color-accent);
+  mix-blend-mode: difference;
+}
+
+/*<-----------------------------Pseudo-classes----------------------------->*/
+
+.button:focus-visible {
+  box-shadow: 2px 2px 0 var(--color-accent);
 }
 
 /*<-----------------------------Page----------------------------->*/
+
 .page {
+  position: relative;
+  z-index: -1;
   min-inline-size: 375px;
   max-inline-size: 700px;
   font-family: var(--font-inter), sans-serif;
@@ -51,7 +125,7 @@
   gap: 20px;
   font-family: var(--font-press-start), sans-serif;
   text-align: center;
-  border: 2px solid var(--color-main);
+  border: 2px solid var(--color-accent);
   background-color: var(--color-bg);
 }
 
@@ -80,17 +154,17 @@
 /*<-----------------------------Card----------------------------->*/
 
 section:not(section:last-child) {
-  margin-bottom: 51px;
+  margin-bottom: 49px;
 }
 
 @media (min-width: 1440px) {
   section:not(section:last-child) {
-    margin-bottom: 50px;
+    margin-bottom: 48px;
   }
 }
 
 .card {
-  border: 2px solid var(--color-main);
+  border: 2px solid var(--color-accent);
   background-color: var(--color-bg);
 }
 
@@ -105,11 +179,15 @@ section:not(section:last-child) {
 
 .card__img {
   min-height: 375px;
-  background: var(--card-img) center/cover no-repeat;
-  object-fit: cover;
   background-position: center;
+  background-repeat: no-repeat;
+  object-fit: cover;
   position: relative;
   background-blend-mode: hard-light;
+}
+
+.card__img img {
+  width: 100%;
 }
 
 @media (min-width: 1440px) {
@@ -143,6 +221,7 @@ section:not(section:last-child) {
 .card__footer {
   display: flex;
   flex-direction: column;
+  align-items: end;
   gap: 25px;
   padding: 25px 25px 25px 25px;
 }
@@ -150,7 +229,7 @@ section:not(section:last-child) {
 @media (min-width: 1440px) {
   .card__footer {
     padding: 27px 25px 25px 25px;
-    gap: 27px;
+    gap: 22px;
   }
 }
 
@@ -168,30 +247,110 @@ section:not(section:last-child) {
   }
 }
 
-.card__like-button {
-  display: inline-flex;
+.card__buttons {
+  display: flex;
   align-items: center;
-  gap: 12px;
-  align-self: end;
+  gap: 6px;
+}
+
+.card__like-button {
+  width: 118px;
+  height: 31px;
+  outline: none;
+}
+
+/*<-----------------------------icon-heart----------------------------->*/
+
+.card__icon-button {
   border: none;
-  background-color: transparent;
+  outline: none;
+  background-color: var(--color-bg);
+  transition: box-shadow 0.3s ease;
 }
 
-.button-card {
-  padding: 10px 35px;
+.card__icon-button:focus-visible {
+  box-shadow: 0 0 0 2px var(--color-accent);
 }
 
-.like-icon {
-  width: 27px;
-  height: 24px;
+.contour {
+  transition: fill 0.1s linear;
 }
 
-/*<-----------------------------Dialog----------------------------->*/
+.like-icon.is-liked .contour {
+  --svg-contour-color: #ff0000;
+  fill: var(--svg-contour-color);
+  transition: fill 0.3s 0.06s linear;
+}
+
+.core {
+  transition: fill 0.3s 0.03s linear;
+}
+
+.like-icon:hover .core {
+  transition: fill 0.3s linear;
+  fill: var(--svg-core-color);
+}
+
+.like-icon:active .core {
+  --svg-core-color: #ff0000;
+  transition: fill 0.3s linear;
+  fill: var(--svg-core-color);
+}
+
+.like-icon.is-liked .core {
+  --svg-core-color: #ff0000;
+  fill: var(--svg-core-color);
+  transition: fill 0.3s linear;
+}
+
+.main-body {
+  transition: fill 0.3s linear;
+}
+
+.like-icon:hover .main-body {
+  --animation-fill-color: #000;
+  transition: fill 0.3s 0.05s linear;
+  fill: var(--animation-fill-color);
+}
+
+.like-icon:active .main-body {
+  --animation-fill-color: #ff0000;
+  transition: fill 0.3s 0.05s linear;
+  fill: var(--animation-fill-color);
+}
+
+.like-icon.is-liked .main-body {
+  --animation-fill-color: #ff0000;
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s 0.05s linear;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.like-icon.is-liked .sparks {
+  transform-origin: center;
+  animation: sparks 0.3s 0.3s ease-in;
+}
+
+.like-icon.is-liked .heart {
+  transform-origin: center;
+  animation: scale 0.1s 0.3s ease-in;
+}
+
+/*<-----------------------------Footer----------------------------->*/
 
 .footer {
   display: flex;
   justify-content: center;
-  padding: 52px 31px 100px 31px;
+  padding: 46px 31px 100px 31px;
+}
+
+@media (min-width: 375px) {
+  .footer {
+    padding: 50px 31px 100px 31px;
+  }
 }
 
 .button-footer {
@@ -199,13 +358,13 @@ section:not(section:last-child) {
   flex-direction: column;
   align-items: center;
   padding: 15px 20px 15px 20px;
-  gap: 8px;
+  gap: 7px;
 }
 
 @media (min-width: 1440px) {
   .button-footer {
     flex-direction: row;
-    padding: 15px 20px 15px 20px;
+    padding: 16px;
   }
 }
 
@@ -216,6 +375,19 @@ section:not(section:last-child) {
     width: 21px;
     height: 21px;
   }
+}
+
+.floppy-icon__footer {
+  fill: white;
+  mix-blend-mode: difference;
+}
+
+.floppy-icon__footer:focus {
+  outline: none;
+}
+
+.floppy-icon__footer:focus-visible {
+  outline: 2px solid var(--color-accent);
 }
 
 /*<-----------------------------Modal----------------------------->*/
