--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,8 +1,8 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
 :root {
   --font-inter: 'Inter';
-  --font-press-start: 'PressStart2P-Regular';
-  --font-weight-noraml: 400;
+  --font-press-start: 'PressStart2P';
+  --font-weight-normal: 400;
   --font-weight-bold: 700;
   --color-accent: #000;
   --color-bg: #fff;
@@ -32,7 +32,7 @@
   --size-card-text-description: 18px;
   --size-card-text-button: 14px;
   --size-card-text-label: 14px;
-  --card-shdow-color: #fff;
+  --card-shadow-color: #fff;
 
   /*<-----------------------------Modal-styles----------------------------->*/
   --font-modal-size: 14px;
